# netifs-rs

netifs/: Cargo.toml
netifs-cli/: Cargo.toml
netifs-cli/src/: main.rs
netifs/src/: lib.rs  windows.rs
