[package]
name = "netifs"
version = "0.3.1"
authors = ["Manuel Stocker <mensi@mensi.ch>", "Daisuke Ban <exceed@alae.jp>"]
edition = "2021"
description = "Cross-platform utility library to enumerate local network interfaces."
readme = "../README.md"
keywords = ["networking"]
categories = ["network-programming"]
homepage = "https://github.com/exceed-alae/netifs-rs"
repository = "https://github.com/exceed-alae/netifs-rs"
license = "Apache-2.0"

[dependencies]
winapi = { version = "0.3.8", features = ["minwindef", "winerror", "ifdef", "ws2def", "ws2ipdef", "ipifcons"] }
libc = "0.2"
eui48 = "0.5"
ipnetwork = "0.16.0"
widestring = "0.4.0"